# Prog_VectorSplitting

./: Makefile.in  README.md  configure  configure.ac
Example/: VectSplit.input
old/: Makefile  VectorSplitting_V1.c  VectorSplitting_V2.c
src/: Makefile.am  Makefile.in  VectSplit2.input  VectSplit3.input  VectorSplitting.c
